--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5168,6 +5168,12 @@ input[type=checkbox] ~ .widget__submit--label::before, input[type=checkbox] ~ .w
   z-index: -1;
   opacity: 0.1;
 }
+.footer-layout__bg {
+  background-image: url('assets/img/footer/footerbg.jpeg');
+  background-size: cover;
+  background-position: center;
+}
+
 .footer-layout--style .footer-layout__top, .footer-layout--style2 .footer-layout__top {
   padding-top: 100px;
   padding-bottom: 40px;
@@ -8568,6 +8574,17 @@ blockquote.vs-quote .quote-author {
   bottom: 0;
   z-index: 3;
 }
+.hero-img--h2 img {
+  width: 100%;
+  height: 560px;
+  object-fit: cover;
+  border-radius: 10px; /* optional for rounded corners */
+}
+@media (max-width: 768px) {
+  .hero-img--h2 img {
+    height: 300px;
+  }
+}
 @media (max-width: 1499px) {
   .hero-img1 {
     max-width: 710px;
@@ -9437,6 +9454,11 @@ blockquote.vs-quote .quote-author {
   padding: 0 20px 20px 0;
   position: relative;
   margin-bottom: 30px;
+}
+.service-block--style2 {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 .service-block--style2 .service-block__body {
   background-color: var(--white-color);
