--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3437,7 +3437,27 @@ textarea.is-invalid {
 .bg-auto {
   background-size: auto auto;
 }
-
+.footer-bg-blur {
+  background-image: url('assets/img/footer/footerbg.jpeg');
+  background-size: cover;
+  background-position: center;
+  filter: blur(8px);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  opacity: 0.5;
+}
+.footer-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+.footer-wrapper > *:not(.footer-bg-blur) {
+  position: relative;
+  z-index: 1;
+}
 /*------------------- 3.8. Text Color -------------------*/
 .text-theme {
   color: var(--theme-color) !important;
@@ -6605,6 +6625,10 @@ input[type=checkbox] ~ .widget__submit--label::before, input[type=checkbox] ~ .w
   background-color: var(--title-color);
   position: relative;
   z-index: 1;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 550px;
   /* Medium devices */
 }
 .breadcumb-wrapper::before {
@@ -11306,7 +11330,10 @@ blockquote.vs-quote .quote-author {
 }
 
 .product-style1 .product-img img {
-  width: 100%;
+  width: 370px;
+  height: 325px;
+  border: 5px solid #333131;
+  border-radius: 8px;
 }
 
 .product-style1 .product-content {
@@ -11468,7 +11495,6 @@ blockquote.vs-quote .quote-author {
   display: inline-flex;
   margin-top: 30px;
 }
-
 .vs-pagination {
   position: relative;
   display: inline-flex;
@@ -11700,6 +11726,9 @@ blockquote.vs-quote .quote-author {
 }
 .product-big-img img {
   width: 100%;
+  height: 325px;
+  border: 5px solid #555555;
+  border-radius: 8px;
 }
 
 .product-thumb-slide {
